fix spacing

--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ p {
   display: flex;
   flex-direction: column;
   width: 100%;  
-  user-select: none;
 }
 
 .section {
@@ -96,7 +95,7 @@ p {
 }
 
 .description {
-  margin-bottom: 18px;
+  margin-bottom: 1rem;
   line-height: 1.3;
 }
 
@@ -114,7 +113,8 @@ p {
 
 .project-text-paragraph {
   width: 23rem;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  line-height: 1.25;
   margin-right: 2rem;
 }
 
